--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,6 @@ GOOGLE_GEMINI_API_KEY=*********************************
 # File Upload Configuration
 # Maximum file size in bytes (10MB = 10485760)
 MAX_FILE_SIZE=10485760
+
+JWT_SECRET=your_super_secret_jwt_key
+JWT_EXPIRE=expireTime
