--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API for Personal Cloud Storage with AI",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,7 +13,9 @@
     "ai",
     "file-upload",
     "express",
-    "mongodb"
+    "mongodb",
+    "authentication",
+    "jwt"
   ],
   "author": "",
   "license": "MIT",
