--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@google/generative-ai": "^0.7.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
+    "bullmq": "^5.66.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -31,7 +33,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
